# kitty

./: Kitty 再版设计.md  README.md  README_zh.md  pyproject.toml
kitty/: cli.py
kitty/commands/: checkout.py  clone.py  distribute.py  edit.py  fetch.py  init.py  link.py  list_.py  migrate.py  new.py  push.py  status.py  unlink.py
kitty/core/: config.py  git.py  hashing.py  params.py  providers.py  symlinks.py
