[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitty"
version = "0.1.0"
description = "Skill manager for AI agents (Claude, Gemini, Codex)"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.scripts]
kitty = "kitty.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["kitty"]
